v2 social links flex wrap fixed

--- a/style.css
+++ b/style.css
@@ -271,6 +271,6 @@ hr {
   }
   .social-block {
     width: 200px;
-    margin: 25px auto;
+    margin: 25px 50px;
   }
 }
